移植远程合成终端菜单到 1.12.2